--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
 crossorigin="anonymous">
 
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 
 <title>John Robert Lombard</title>
   </head>
